feat: add paginated pokemon card search